# govdata-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  disable.py  install.py  pyproject.toml
.codex-plugin/: plugin.json
docs/: README.md  auth.md  development.md  endpoints.md  install.md  mcp-clients.md  testing.md  tools.md  troubleshooting.md  workflows.md
src/govdata_mcp/: __init__.py  auth_store.py  client.py  diagnostics.py  endpoint_docs.py  guidance.py  ipums.py  registry.py  request_shapes.py  router.py  server.py
tests/: test_auth_store.py  test_client.py  test_disable.py  test_endpoint_docs.py  test_guidance.py  test_installer.py  test_ipums.py  test_registry.py  test_router.py
