[project]
name = "govdata-mcp"
version = "0.1.0"
description = "Local MCP server for raw passthrough access to U.S. government data APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Felpix" },
]
keywords = ["government-data", "mcp", "census", "bls", "fred", "ipums"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "httpx>=0.27",
  "keyring>=25.0",
  "mcp[cli]>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
govdata-mcp = "govdata_mcp.server:main"
govdata-auth = "govdata_mcp.auth_store:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
